Convert `desktop-client` into gradle application